modifying text from lorem ipsum to natural narrative

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                     <hr class="line">
                     <hr class="line">
                     <p class="fs-5 text-muted">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam expedita mollitia esse iste optio eum ex porro deleniti ducimus dicta consequatur impedit fuga repellat sunt error, nulla maiores? Esse iste optio eum ex porro deleniti ducimus dicta consequatur impedit fuga repellat sunt error, nulla maioresIusto, nisi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Whether you’re new to automation or looking for more technical training, the Automated Test Conference  welcomes all levels. This highly valuable experience lets you learn firsthand from accomplished industry professionals. Get practical training that you can put into practice right away. And ignite your forward momentum with just a single class or four full days of sessions.
                     </p>
                 </div>
             </header>
