adding changes to lorem on form view

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -30,7 +30,7 @@
                     <hr class="line">
                     <h2>Speaker Application Form</h2>
                     <p class="lead">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias perferendis voluptates, ipsam commodi, debitis quibusdam, quia modi laboriosam nostrum quo asperiores veritatis perspiciatis architecto repudiandae omnis cupiditate suscipit earum excepturi.
+                      With this simple online speaker registration form you can provide information the speaker's biography, the type of conference that will be held, target audience as well as references for the information provided. You can also specify the speaker Session identifying the topic area, the target audience, and skill level of the content. 
                     </p>
                 </div>
                 <div class="row g-5">
